name:                secret-sharing
version:             1.1.0
synopsis:            Information-theoretic secure secret sharing
description:
 Implementation of an (@m@, @n@)-threshold secret sharing scheme, as described
 in \"How to share a secret.\" by Shamir, Adi. In Communications of the ACM
 22 (11): 612–613, 1979.
 .
 >λ> [x,y,z] <- encodeSecret 2 3 "Hello!"
 >λ> map decodeSecret [[x,y],[y,z],[x,z],[x,y,z]]
 >["Hello!","Hello!","Hello!","Hello!"]
license:             LGPL-2.1
license-file:        LICENSE
author:              Peter Robinson <peter.robinson@monoid.at>
maintainer:          peter.robinson@monoid.at
copyright:           Peter Robinson 2014
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.8
homepage:            http://monoid.at/code
stability:           experimental

source-repository head
  type: git
  location: git@github.com:pwrobinson/secret-sharing.git

library
  hs-source-dirs:   src
  exposed-modules:  Crypto.SecretSharing
  other-modules:    Crypto.SecretSharing.Internal

  build-depends:    base                 >= 4.6     && < 5,
                    binary               >= 0.5.1.1 && < 0.10.0,
                    bytestring           >= 0.10    && < 0.11,
                    dice-entropy-conduit >= 1.0     && < 1.1,
                    finite-field         >= 0.8.0   && < 0.10,
                    polynomial           >= 0.7.1   && < 0.8
  ghc-options:      -Wall


test-suite Main
  type:            exitcode-stdio-1.0
  main-is:         Spec.hs
  hs-source-dirs:  test
  build-depends:   base,
                   bytestring,
                   hspec,
                   hspec-core,
                   QuickCheck,
                   secret-sharing
